fixing some issues

--- a/Code/.env.example
+++ b/Code/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=Prod
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://dpskidsbhopal.com
 
 LOG_CHANNEL=stack
 
@@ -16,8 +16,9 @@ DB_PASSWORD=secret
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_DRIVER=cookie
+SESSION_LIFETIME=5
+SESSION_EXPIRE_ON_CLOSE=true
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
